<resources>
    <string name="app_name">Quiz App</string>
    <string name="btn_register_text">Go!</string>
    <string name="editT_register_hint">Right here</string>
    <string name="greeting">Welcome</string>
    <string name="greeting_subtitle">Please enter your name</string>
    <string name="question">What country does this flag belong to?</string>
    <string name="submit_answer">SUBMIT</string>
    <string name="change_question">Go for the next question</string>
    <string name="finish">good to go!</string>
    <string name="result_title">Results!</string>
    <string name="result_congrats">Hey, Congratulations!</string>
</resources>